--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,10 +5,10 @@ authors = ["deprilula28", "Dream", "Cyber28"]
 edition = "2018"
 
 [dependencies]
-reqwest = "0.10.4"
+reqwest = { version = "0.10.4", features = [ "json" ] }
 #ws = "0.9.1"
 tungstenite = "0.10.1"
-url = "2.1.0"
 flate2 = "1.0"
 serde_json = "1.0"
-serde = "1.0"
+serde = { version = "1.0", features = ["derive"] }
+tokio = { version = "0.2.18", features = ["macros", "tcp", "dns", "io-util"] }
