--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,9 +6,10 @@ edition = "2018"
 
 [dependencies]
 reqwest = { version = "0.10.4", features = [ "json" ] }
-#ws = "0.9.1"
 tungstenite = "0.10.1"
 flate2 = "1.0"
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "0.2.18", features = ["macros", "tcp", "dns", "io-util"] }
+num_enum = "0.4.3"
+ansi_term = "0.12"
