--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,5 +12,7 @@ serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "0.2.18", features = ["macros", "tcp", "dns", "io-util"] }
 num_enum = "0.4.3"
-log = "0.4"
-env_logger = "0.7"
+log = "0.4.0"
+
+[dev-dependencies]
+env_logger = "0.7.1"
