--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ serde = { version = "1.0", features = ["derive"] }
 tokio = { version = "0.2.18", features = ["macros", "tcp", "dns", "io-util"] }
 num_enum = "0.4.3"
 log = "0.4.0"
+async-tungstenite = "0.4.2"
 
 [dev-dependencies]
 env_logger = "0.7.1"
